vcs/specs/parser/fail/generics/deeply_nested_unclosed.vr
// @test: parse-fail
// @level: L0
// @tags: parser, generics, nesting, unclosed, error
// @description: Test deeply nested generic with unclosed brackets
// @expected-error: E081

type Data is Map<Text, List<Set<Option<Int>>>;
